# agenomic-python

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: atep.md  cloud-upload.md  decorator.md  integrations.md  non-determinism.md  quickstart.md  redaction.md  tracing.md
docs/providers/: huggingface.md
examples/: 01_minimal_trace.py  02_decorator_jsonl.py  03_atep_local.py  04_openai_traced.py  05_langgraph_traced.py  06_cloud_upload.py  07_offline_signed_release.py  08_online_tracking.py  basic_agent.py  export_traces.py  langgraph_stub.py
scripts/: make_golden_fixture.py  smoke.sh
src/agenomic/: __init__.py  _client.py  exceptions.py
src/agenomic/agent/: __init__.py  genome.py
src/agenomic/atep/: __init__.py  event.py  segment.py  store.py
src/agenomic/canonical/: __init__.py  hashing.py  otel.py  recorder.py
src/agenomic/cli/: __init__.py  __main__.py
src/agenomic/client/: __init__.py  auth.py  client.py
src/agenomic/crypto/: __init__.py  hashing.py  signing.py
src/agenomic/exporters/: __init__.py  atep_local.py  base.py  http.py  jsonl.py  multi.py
src/agenomic/integrations/: __init__.py  anthropic.py  huggingface.py  langgraph.py  mcp.py  openai.py
src/agenomic/providers/: __init__.py  huggingface.py
src/agenomic/redaction/: __init__.py  engine.py  rules.py
src/agenomic/trace/: __init__.py  context.py  decorator.py  envelope_builder.py  recorder.py
src/agenomic/tracking/: __init__.py  session.py
src/agenomic/types/: __init__.py  attestation.py  envelope.py  orchestration.py
src/agentlock/: __init__.py  client.py  exceptions.py  models.py  redaction.py  tracing.py  utils.py
src/agentlock/atep/: __init__.py  clock.py  event.py  segment.py  store.py
src/agentlock/cli/: __init__.py  __main__.py
src/agentlock/client/: __init__.py  auth.py  client.py  retry.py
src/agentlock/crypto/: __init__.py  canonical.py  hashing.py  signing.py
src/agentlock/exporters/: __init__.py  atep_local.py  base.py  http.py  jsonl.py  multi.py
src/agentlock/integrations/: __init__.py  anthropic.py  langgraph.py  mcp.py  openai.py
src/agentlock/redaction/: __init__.py  engine.py  rules.py
src/agentlock/trace/: __init__.py  context.py  decorator.py  envelope_builder.py  recorder.py
src/agentlock/types/: __init__.py  attestation.py  envelope.py  identifiers.py  trace.py
tests/: conftest.py  test_agent_genome.py  test_atep_clock.py  test_atep_event.py  test_atep_golden.py  test_atep_segment.py  test_atep_store.py  test_canonical_langgraph.py  test_canonical_otel.py  test_canonical_recorder.py  test_canonical_redaction.py  test_cli.py  test_client.py  test_crypto_canonical.py  test_crypto_hashing.py  test_crypto_signing.py  test_examples.py  test_exporters_atep.py  test_exporters_http.py  test_exporters_jsonl.py  test_exporters_multi.py  test_integrations_huggingface.py  test_integrations_langgraph.py  test_integrations_mcp.py  test_integrations_openai.py  test_jsonl_exporter.py  test_models.py  test_providers_huggingface.py  test_redaction.py  test_trace_context.py  test_trace_decorator.py  test_trace_envelope.py  test_tracing.py  test_tracking.py  test_types.py  test_types_orchestration.py
tests/fixtures/golden_atep_segments/: README.md  golden_pub.pem  golden_v1.atep
