[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "agentlock-python"
version = "0.1.0"
description = "Lightweight Python SDK for AgentLock-compatible agent tracing."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AgentLock" }]
keywords = ["ai", "agents", "observability", "tracing", "security"]
dependencies = [
    "pydantic>=2.7,<3.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.4,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentlock"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
