[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agenomic"
version = "0.1.0"
description = "Python SDK for Agenomic — agent-native versioning, tracing, and ATEP signed event logs."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Agenomic contributors" }]
keywords = ["agent", "llm", "versioning", "tracing", "atep", "ai-act", "compliance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.7,<3",
    "httpx>=0.27,<1",
    "cbor2>=5.6,<6",
    "blake3>=0.4,<1",
    "cryptography>=42,<46",
    "ulid-py>=1.1,<2",
    "typing-extensions>=4.10",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
anthropic = ["anthropic>=0.34"]
huggingface = ["huggingface-hub>=0.20"]
langgraph = ["langgraph>=0.2"]
mcp = ["mcp>=1.0"]
otel = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
all = ["openai>=1.40", "anthropic>=0.34", "huggingface-hub>=0.20", "langgraph>=0.2", "mcp>=1.0", "opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
    "mypy>=1.11",
    "hypothesis>=6.110",
    "freezegun>=1.5",
    "jsonschema>=4.18",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]

[project.urls]
Homepage = "https://agenomic.dev"
Source = "https://github.com/agenomic/agenomic-python"
Issues = "https://github.com/agenomic/agenomic-python/issues"

[project.scripts]
agenomic-py = "agenomic.cli.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agenomic"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "PT", "RET", "SIM", "ASYNC"]
ignore = ["E501", "UP045", "UP007", "UP035", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PT011", "B017"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["openai.*", "anthropic.*", "langgraph.*", "yaml", "ulid", "blake3", "cbor2"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=agenomic --cov-report=term-missing"
